zope.testing Changelog
**********************

3.8.4 (unreleased)
==================

- Fixed missing imports and undefined variables reported by pyflakes,
  adding tests to exercise the blind spots.

- Cleaned up unused imports reported by pyflakes.

3.8.3 (2009-09-21)
==================

- Avoid a split() call or we get test failures when running from a directory
  with spaces in it.

- Fix testrunner behavior on Windows for -j2 (or greater) combined with -v
  (or greater).

3.8.2 (2009-09-15)
==================

- Removing hotshot profiler when using Python 2.6. That makes zope.testing
  compatible with Python 2.6


3.8.1 (2009-08-12)
==================

- Avoid hardcoding sys.argv[0] as script;
  allow, for instance, Zope 2's `bin/instance test` (LP#407916).

- Produce a clear error message when a subprocess doesn't follow the
  zope.testing.testrunner protocol (LP#407916).

- Do not unnecessarily squelch verbose output in a subprocess when there are
  not multiple subprocesses.

- Do not unnecessarily batch subprocess output, which can stymie automated and
  human processes for identifying hung tests.

- Include incremental output when there are multiple subprocesses and a
  verbosity of -vv or greater is requested.  This again is not batched,
  supporting automated processes and humans looking for hung tests.


3.8.0 (2009-07-24)
==================

- Testrunner automatically picks up descendants of unittest.TestCase in test
  modules, so you don't have to provide a test_suite() anymore.


3.7.7 (2009-07-15)
==================

- Clean up support for displaying tracebacks with supplements by turning it
  into an always-enabled feature and making the dependency on zope.exceptions
  explicit.

- Fix #251759: Test runner descended into directories that aren't Python
  packages.

- Code cleanups.


3.7.6 (2009-07-02)
==================

- Add zope-testrunner console_scripts entry point. This exposes a